# MPC_Local_Planner

./: .~lock.Untitled 2.ods#  .~lock.statestic times solver and obstacles.ods#  CMakeLists.txt  MPC_LOCAL_PALNNER.rviz  README.md  env.sh  package.xml
config_params/: ros_parameters.yaml
control_unitree/: CMakeLists.txt  member_functions.cpp  not_composable.cpp  package.xml
devel/: .catkin  .rosinstall  setup.sh
devel/lib/detection_collision/: detection_collision
devel/lib/mpc_planner/: mpc_planner
devel/lib/pkgconfig/: detection_collision.pc  mpc_planner.pc
devel/share/detection_collision/cmake/: detection_collision-msg-paths.cmake  detection_collisionConfig.cmake
devel/share/mpc_planner/cmake/: mpc_plannerConfig.cmake
devel/share/roseus/ros/detection_collision/: manifest.l
docker/: Dockerfile  build.sh  entrypoint.sh  into.sh  run_mpc.sh  start.sh
include/: ROS_Node.h
scripts/: acados_solver.json  create_solver.py  robot_model.py  test_solver.py
scripts/c_generated_code/: Makefile  acados_sim_solver_robot_model.c  acados_sim_solver_robot_model.h  acados_solver.pxd  acados_solver_robot_model.c  acados_solver_robot_model.h  main_robot_model.c  main_sim_robot_model.c
scripts/c_generated_code/robot_model_constraints/: robot_model_constraints.h
scripts/c_generated_code/robot_model_cost/: robot_model_cost.h  robot_model_cost_y_0_fun.c  robot_model_cost_y_0_fun_jac_ut_xt.c  robot_model_cost_y_0_hess.c  robot_model_cost_y_e_fun.c  robot_model_cost_y_e_fun_jac_ut_xt.c  robot_model_cost_y_e_hess.c  robot_model_cost_y_fun.c  robot_model_cost_y_fun_jac_ut_xt.c  robot_model_cost_y_hess.c
scripts/c_generated_code/robot_model_model/: robot_model_model.h
src/: MPC_Planner.cpp  MPC_ROS_Utils.cpp  main.cpp
